Correctly visualizing the whole schema in the database viewer (main app) and vertical scrollbar added to this GUI element

--- a/src/main/resources/public/css/app.css
+++ b/src/main/resources/public/css/app.css
@@ -13,6 +13,7 @@ html, body {
 	text-align: left; 
 	padding-bottom: 3px;
 	background-color: #f7f7f5 !important;
+	overflow-y: auto;
 }
 
 #databases-dropdown {
